--- a/projects/hello-world/index.html
+++ b/projects/hello-world/index.html
@@ -3,38 +3,38 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Hello World — HTML Fundamentals</title>
+  <title>Hellow World</title>
 </head>
 <body>
   <header>
     <h1>Hello, World!</h1>
-    <p>This page demonstrates basic HTML elements.</p>
+    <p>Basic HTML</p>
   </header>
 
   <main>
     <section>
       <h2>Text</h2>
-      <p>This is a paragraph with <strong>strong</strong> and <em>emphasis</em>.</p>
+      <p>Calisthenics is the best for getting <strong>strong</strong> and <em>body control</em>.</p>
     </section>
 
     <section>
-      <h2>Image & Link</h2>
-      <p><a href="https://developer.mozilla.org/">Visit MDN Docs</a></p>
+      <h2>Image & Link Test </h2>
+      <p><a href="https://developer.mozilla.org/">best html synax</a></p>
       <img src="https://via.placeholder.com/300x150" alt="Placeholder image" />
     </section>
 
     <section>
       <h2>Form</h2>
       <form>
-        <label>Name: <input type="text" placeholder="Your name" /></label><br><br>
-        <label>Email: <input type="email" placeholder="you@example.com" /></label><br><br>
+        <label>Name: <input type="text" placeholder="Frigui Camara" /></label><br><br>
+        <label>Email: <input type="email" placeholder="friguicamara5@gmail.com" /></label><br><br>
         <button type="submit">Submit</button>
       </form>
     </section>
   </main>
 
   <footer>
-    <small>© 2025 Frigui Camara</small>
+    <small>2025 Frigui Camara</small>
   </footer>
 </body>
 </html> 
