--- a/projects/hello-world/index.html
+++ b/projects/hello-world/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Hellow World</title>
+  <title>Hello World</title>
 </head>
 <body>
   <header>
-    <h1>Hello, World!</h1>
+    <h1>Hello, Universe</h1>
     <p>Basic HTML</p>
   </header>
 
@@ -19,15 +19,15 @@
 
     <section>
       <h2>Image & Link Test </h2>
-      <p><a href="https://developer.mozilla.org/">best html synax</a></p>
+      <p><a href="https://developer.mozilla.org/">Learn HTML syntax here!</a></p>
       <img src="https://via.placeholder.com/300x150" alt="Placeholder image" />
     </section>
 
     <section>
       <h2>Form</h2>
       <form>
-        <label>Name: <input type="text" placeholder="Frigui Camara" /></label><br><br>
-        <label>Email: <input type="email" placeholder="friguicamara5@gmail.com" /></label><br><br>
+        <label>Name: <input type="text" placeholder="Name" /></label><br><br>
+        <label>Email: <input type="email" placeholder="Email" /></label><br><br>
         <button type="submit">Submit</button>
       </form>
     </section>
