--- a/projects/hello-world/index.html
+++ b/projects/hello-world/index.html
@@ -20,7 +20,7 @@
     <section>
       <h2>Image & Link Test </h2>
       <p><a href="https://developer.mozilla.org/">Learn HTML syntax here!</a></p>
-      <img src="https://tse4.mm.bing.net/th/id/OIP.AEkvzGSssR_BRfvkfM32ewHaE8?rs=1&pid=ImgDetMain&o=7&rm=3" alt="Placeholder image" />
+      <img src="https://png.pngtree.com/png-vector/20241023/ourmid/pngtree-transparent-background-calisthenics-workout-png-image_13500993.png" alt="Strong man image" />
     </section>
 
     <section>
