--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h2>Learning Logs</h2>
     <ul>
       <li>
-        <a href="./notes/day-01.md">Day 1 — HTML Fundamentals (Ch.1–3)</a>
+        <a href="./notes/day-01.html">Day 1 — HTML Fundamentals (Ch.1–3)</a>
       </li>
     </ul>
 
