--- a/notes/day-01.html
+++ b/notes/day-01.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <main>
-    <h1>Day 1 — HTML Fundamentals (Ch.1–3)</h1>
+    <h1>Day 1 — HTML Fundamentals (Ch.1–3)</h1> <hr /> 
 
     <p><strong>Resource:</strong> 
       <a href="https://sites.math.duke.edu/courses/math_everywhere/assets/techRefs/HTML%20and%20CSS-%20Design%20and%20Build%20Websites_Jon%20Duckett_2011.pdf">
@@ -15,16 +15,16 @@
       </a>
     </p>
 
-    <p><strong>Chapters Covered:</strong> 1–3</p>
-
+    <p><strong>Chapters Covered:</strong> 1–3</p> 
+  
     <h2>Topics Practiced</h2>
     <ul>
       <li>Basic HTML structure (html, head, body)</li>
       <li>Headings &amp; text (i, b, em, strong, del, ins, sup, sub, abbr, dfn)</li>
       <li>Lists (ul, ol, dl) and nesting</li>
       <li>Links (a), email (mailto:), quotes (blockquote, q), hr</li>
-    </ul>
-
+    </ul> 
+    
     <h2>Project</h2>
     <p>
       <a href="../projects/day-01/">View Day 1 Project</a>
@@ -36,6 +36,8 @@
       <li>Practiced multiple inline/block elements and nesting</li>
       <li>Started thinking about structure and readability</li>
     </ul>
+      <h2>Next Goals</h2>
+    <p>Continue to Chapter 4–6 → Semantic markup, attributes, links, and images. </p>
 
     <p><a href="../index.html">← Back to Home</a></p>
   </main>
