--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <ul>
       <li>
         <a href="./notes/day-01.html">Day 1 — HTML Fundamentals (Ch.1–3)</a>
+        <a href="./notes/day-02.html">Day 2 — Links, Images, Tables & Forms (Ch.4–7)</a> 
       </li>
     </ul>
 
@@ -21,6 +22,7 @@
     <ul>
       <li>
         <a href="./projects/day-01/">Day 1 Project — HTML Fundamentals</a>
+        <a href="./projects/day-02/">Day 2 Project — Finishing up HTMl Fundamentals </a> 
       </li>
     </ul>
   </main>
